# bismuth-server

./: .gitignore  Cargo.toml  bismuth.db
migration/: Cargo.toml
migration/src/: lib.rs
migration/src/migrations/: mod.rs
migration/src/migrations/v0_1_0/: facets_table.rs  fs_addresses_table.rs  fs_nodes_table.rs  in_note_addresses_table.rs  mod.rs  notes_table.rs  shard_addresses_table.rs  shards_table.rs
migration/src/util/: mod.rs
nix/modules/: devshell.nix  rust.nix  template.nix
src/: main.rs
src/db/: mod.rs
src/db/entity/: facets.rs  mod.rs
target-install/: .rustc_info.json
target-install/release/.fingerprint/aho-corasick-0f5887feac94fe92/: lib-aho_corasick  lib-aho_corasick.json
target-install/release/.fingerprint/allocator-api2-4982d00d5f5f2e95/: lib-allocator_api2  lib-allocator_api2.json
target-install/release/.fingerprint/bitflags-220e6738168281fc/: lib-bitflags  lib-bitflags.json
target-install/release/.fingerprint/block-buffer-87a5b5c57c7205c2/: lib-block_buffer  lib-block_buffer.json
target-install/release/.fingerprint/bstr-2003dd2da6b047a6/: lib-bstr  lib-bstr.json
target-install/release/.fingerprint/byteorder-c07f5c820f643e55/: lib-byteorder  lib-byteorder.json
target-install/release/.fingerprint/bytes-dd5be523f1d72f57/: lib-bytes  lib-bytes.json
target-install/release/.fingerprint/cc-a16ad256fdb6b102/: lib-cc  lib-cc.json
target-install/release/.fingerprint/cfg-if-94e3b2e5ea0ad823/: lib-cfg_if  lib-cfg_if.json
target-install/release/.fingerprint/const-oid-ec6a761a63edff1a/: lib-const_oid  lib-const_oid.json
(+207 files in other folders)
