[package]
authors = ["Augusto Megener"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "bismuth-server"
description = ""
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.14", features = ["derive"] }
fuser = "0.17.0"
tokio = { version = "1.52.3", features = ["full"] }
sea-orm = { version = "^2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "schema-sync", "with-chrono"] }
sea-orm-migration = { version = "^2.0.0-rc" }
migration = { path = "migration" }
uuid = { version = "1.15", features = ["v4", "v7", "serde"] }

[workspace]
members = ["migration"]
